feat: create users doc
