# swagger/v1/swagger.yaml
@@ -84,6 +84,58 @@ paths:
                   type: string
               required:
               - name
+  "/api/v1/auth":
+    post:
+      summary: create user
+      tags:
+      - User
+      parameters: []
+      responses:
+        '200':
+          description: ok
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  default: Felipe Maciel
+                email:
+                  type: string
+                  default: felipemrvieira@gmail.com
+                password:
+                  type: string
+                  default: 123123
+              required:
+              - name
+              - email
+              - password
+  "/api/v1/auth/sign_in":
+    post:
+      summary: login user
+      tags:
+      - User
+      parameters: []
+      responses:
+        '200':
+          description: ok
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  default: felipemrvieira@gmail.com
+                password:
+                  type: string
+                  default: 123123
+              required:
+              - email
+              - password
 servers:
 - url: http://localhost:3000
 - url: http://remote
